--- a/src/components/socials/socials.styles.css
+++ b/src/components/socials/socials.styles.css
@@ -1,6 +1,6 @@
 #socials {
     text-align: center;
-    margin: 50px 0;
+    margin: 30px 0;
 }
 
 .social-icon {
